<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/naziv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naziv"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/opis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opis"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/cena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cena"
        android:textStyle="italic"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/ocena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ocena_ni_ocen"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:paddingTop="4dp" />

</LinearLayout>
