<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Naslov -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/podatki_o_profilu"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- Polja za vnos podatkov -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Ime:      "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/imeInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/ime"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Priimek:  "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/priimekInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/priimek"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Email:    "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="@string/email"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Ulica:    "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ulicaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="Ulica"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Hišna št: "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/hisnaStevilkaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="23"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Posta:    "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/postaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="Ljubljana"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingRight="8dp"
                android:text="     Postna st.:"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/postnaStevilkaInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:hint="1000"
                android:minHeight="48dp"
                android:layout_marginEnd="25dp"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/editButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="12dp"
            android:text="@string/uredi"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="Shrani"
            android:textSize="18sp" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:padding="12dp"
            android:text="Odjava"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>
